# legacy-code

./: .gitmodules  README.md  TODO.md  caicos-gpu.agent.md  pyproject.toml
models/: README.md
scripts/: check_dtype.py  check_embed_offset.py  check_embedding.py  check_layer0.py  check_matmul.py  compare_weights.py  dump_per_layer.py  dump_reference.py  full_layer0.py  test_f16.py  verify_model.py
src/caicos_harness/: __init__.py  cli.py  ollama.py
