[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "caicos-harness"
version = "0.1.0"
description = "Local coding harness for the AMD Caicos XT target backed by Ollama"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
caicos-harness = "caicos_harness.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]